[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easytree"
version = "1.0.1"
authors = [{name = "David Schenck", email = "david.schenck@outlook.com"}]
description = "A recursive dot-styled defaultdict to read and write deeply-nested trees"
readme = { file = "README.md", "content-type" = "text/markdown" }
urls = { "Homepage" = "https://easytree.readthedocs.io/en/latest" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
